Fix images not fitting mobiles properly

--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -40,6 +40,9 @@ img{
     border-style: double;
     border-radius: 40px;
     border-width: 10px;
+    width: auto;
+    max-width: 75%;
+    height: auto;
 }
 
 .return{
